# autodact

./: .gitignore  LICENSE  Makefile  README.md  autodact_macos.spec  autodact_windows.spec  data_anonymisation_app_spec.md  pyproject.toml
.github/workflows/: build.yml  test.yml
assets/: icon.icns
benchmarks/: benchmark_gretel.py  benchmark_kaggle_pii.py  diagnose_name_fps.py  results.json  results_deberta.json  results_kaggle.json  results_kaggle_tuned.json
scripts/: extract_names.py
src/: app_controller.py  config.py  main.py  power.py
src/pipeline/: column_detector.py  custom_list_detector.py  deberta_detector.py  document.py  embedding_matcher.py  entropy_detector.py  fuzzy_matcher.py  llm_detector.py  llm_engine.py  lookup_table.py  name_detector.py  orchestrator.py  parsers.py  post_validator.py  presidio_detector.py  syntactic_detector.py  writers.py
src/session/: session_manager.py  session_state.py
src/ui/: about_dialog.py  column_mapping_dialog.py  custom_lists_dialog.py  drop_zone.py  file_list_panel.py  main_window.py  model_download_dialog.py  output_panel.py  progress_panel.py  styles.py  (+2 more)
tests/: test_column_detector.py  test_config.py  test_custom_list_detector.py  test_deberta_detector.py  test_document.py  test_embedding_matcher.py  test_entropy_detector.py  test_fuzzy_matcher.py  test_integration.py  test_llm_detector.py  test_llm_engine.py  test_lookup_table.py  test_name_detector.py  test_orchestrator.py  test_parsers.py  test_post_validator.py  test_presidio_detector.py  test_syntactic_detector.py  test_titled_names.py  test_writers.py
(+9 files in other folders)
